# keygen-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  devbox.json  devenv.nix  release-plz.toml
.claude/commands/: test-examples.md  test-quick.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: API_COVERAGE.md  RELEASE_GUIDE.md
examples/: README.md  activate_machine.rs  checkout_license.rs  checkout_machine.rs  config_examples.rs  deactivate_machine.rs  service_info.rs  start_heartbeat.rs  validate_license.rs  verify_offline_key.rs
examples/arch/: list_arches.rs
examples/artifact/: create_artifact.rs  get_artifact.rs  list_artifacts.rs
examples/channel/: list_channels.rs
examples/common/: mod.rs
examples/component/: create_component.rs  delete_component.rs  get_component.rs  list_components.rs  list_components_filters.rs  update_component.rs
examples/entitlement/: create_entitlement.rs  delete_entitlement.rs  get_entitlement.rs  list_entitlements.rs  update_entitlement.rs
examples/environment/: create_environment.rs  delete_environment.rs  environment_lifecycle.rs  generate_environment_token.rs  get_environment.rs  list_environments.rs  update_environment.rs
examples/group/: create_group.rs  delete_group.rs  get_group.rs  list_group_relationships.rs  list_groups.rs  update_group.rs
examples/license/: attach_entitlements.rs  checkout_license.rs  create_license.rs  decrement_usage.rs  delete_license.rs  detach_entitlements.rs  increment_usage.rs  license_relationship_lifecycle.rs  list_entitlements.rs  list_licenses.rs  list_licenses_pagination.rs  offline_entitlements.rs  read_license_metadata.rs  reinstate_license.rs  renew_license.rs  reset_usage.rs  revoke_license.rs  suspend_license.rs  update_license.rs  validate_license.rs  verify_offline_key.rs
examples/machine/: activate_machine.rs  checkout_machine.rs  create_machine.rs  deactivate_machine.rs  get_machine.rs  list_machines.rs  machine_transfer_and_filters.rs  offline_entitlements.rs  reset_machine.rs  start_heartbeat.rs  update_machine.rs
examples/package/: create_package.rs  list_packages.rs
examples/platform/: list_platforms.rs
examples/policy/: create_policy.rs  delete_policy.rs  get_policy.rs  list_policies.rs  update_policy.rs
examples/product/: create_product.rs  delete_product.rs  generate_product_token.rs  generate_product_token_with_options.rs  get_product.rs  list_products.rs  update_product.rs
examples/release/: create_release.rs  delete_release.rs  get_release.rs  inspect_release_distribution.rs  list_releases.rs  publish_release.rs  release_lifecycle.rs  update_release.rs  yank_release.rs
examples/service/: health_check.rs  ping_service.rs
examples/token/: get_token.rs  list_tokens.rs  regenerate_token.rs  revoke_token.rs
examples/user/: ban_user.rs  change_group.rs  change_password.rs  create_user.rs  delete_user.rs  generate_token.rs  get_user.rs  list_users.rs  reset_password.rs  unban_user.rs  update_user.rs
examples/webhook_endpoint/: create_webhook_endpoint.rs  delete_webhook_endpoint.rs  get_webhook_endpoint.rs  list_webhook_endpoints.rs  update_webhook_endpoint.rs
examples/webhook_event/: delete_webhook_event.rs  get_webhook_event.rs  list_webhook_events.rs  retry_webhook_event.rs
src/: arch.rs  artifact.rs  certificate.rs  channel.rs  client.rs  component.rs  config.rs  decryptor.rs  entitlement.rs  environment.rs  errors.rs  group.rs  lib.rs  license.rs  license_file.rs  log.rs  machine.rs  machine_file.rs  package.rs  platform.rs  policy.rs  process.rs  product.rs  release.rs  service.rs  token.rs  upgrade.rs  user.rs  validate.rs  verifier.rs  webhook.rs
src/webhook/: endpoint.rs  event.rs  event_types.rs  mod.rs
