[package]
name = "keygen-rs"
version = "0.4.2"
description = "Unofficial Keygen SDK for Rust. Integrate license activation and offline licensing."
license = "MIT"
edition = "2021"

[workspace]
members = [
  ".",
  # "./packages/tauri-plugin-keygen-rs",
  "./packages/tauri-plugin-keygen-rs2"
]

[features]
default = ["rustls"]
# Use rustls as TLS backend (default)
rustls = ["reqwest/rustls-tls"]
# Use native-tls backend
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
url = "2.2"
async-trait = "0.1"
futures = "0.3"
serde_urlencoded = "0.7"
mockito = "0.31"
lazy_static = "1.4.0"
base64 = "0.21.0"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
hostname = "0.4.0"
num_cpus = "1.16.0"
dotenv = "0.15.0"
aes-gcm = "0.9"
log = { version = "0.4", features = ["std"] }
futures-timer = "3.0.3"

[lib]
doctest = false
