[package]
name = "keygen-rs"
version = "0.4.3"
description = "Unofficial Keygen SDK for Rust. Integrate license activation and offline licensing."
license = "MIT"
edition = "2021"

[workspace]
members = [
  ".",
  # "./packages/tauri-plugin-keygen-rs",
  "./packages/tauri-plugin-keygen-rs2"
]

[features]
default = ["rustls", "license-key"]
# Use rustls as TLS backend (default)
rustls = ["reqwest/rustls-tls"]
# Use native-tls backend
native-tls = ["reqwest/native-tls"]
# License Key Authentication (for end users)
license-key = []
# Token Authentication (Environment/Product/License/Admin tokens)
token = []

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
url = "2.2"
async-trait = "0.1"
futures = "0.3"
serde_urlencoded = "0.7"
mockito = "0.31"
lazy_static = "1.4.0"
base64 = "0.21.0"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
hostname = "0.4.0"
num_cpus = "1.16.0"
dotenv = "0.15.0"
aes-gcm = "0.9"
log = { version = "0.4", features = ["std"] }
futures-timer = "3.0.3"

[dev-dependencies]
machine-uid = "0.5.3"

[[example]]
name = "create_product"
path = "examples/product/create_product.rs"

[[example]]
name = "list_products"
path = "examples/product/list_products.rs"

[[example]]
name = "delete_product"
path = "examples/product/delete_product.rs"

[[example]]
name = "get_product"
path = "examples/product/get_product.rs"

[[example]]
name = "update_product"
path = "examples/product/update_product.rs"

[[example]]
name = "list_tokens"
path = "examples/token/list_tokens.rs"

[[example]]
name = "get_token"
path = "examples/token/get_token.rs"

[[example]]
name = "regenerate_token"
path = "examples/token/regenerate_token.rs"

[[example]]
name = "revoke_token"
path = "examples/token/revoke_token.rs"

[lib]
doctest = false
